# pomodoro

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  _base.obj.c  _base.obj.h  bubble.obj.c  bubble.obj.h  camera.obj.c  camera.obj.h  character.obj.c  character.obj.h  collector.obj.c  collector.obj.h  director.obj.c  director.obj.h  effecteer.obj.c  effecteer.obj.h  factory.obj.c  factory.obj.h  item.obj.c  item.obj.h  landscape.obj.c  landscape.obj.h  loader.obj.c  loader.obj.h  miranda.c  miranda.h  module_configuration.obj.c  module_configuration.obj.h  pomodoro.c  puppeteer.obj.c  puppeteer.obj.h  screenwriter.obj.c  screenwriter.obj.h  stagecrafter.obj.c  stagecrafter.obj.h  ui_factory.obj.c  ui_factory.obj.h
data/: credits.txt  pomodoro_config.json  pomodoro_ui.json
data/GUI/: miranda_ui.json  moonlight_GUI.xcf
data/characters/: andrea_character.json  andrii_character.json  anna_character.json  antonietta_character.json  baker_character.json  bistoni_character.json  bruno_character.json  caprini_character.json  cellar_character.json  chaos_character.json  cristiano_character.json  federico_character.json  gianni_character.json  jamal_character.json  letizia_character.json  luca_character.json  luna_character.json  maria_character.json  mariano_character.json  marta_character.json  massimo_character.json  mustafa_character.json  nerd_character.json  policeman_character.json  private_character.json  rector_character.json  roberto_character.json  serena_character.json  siri_character.json  (+5 more)
tools/: explode_pomodoro_dialogs.c  extract_dialog_json.c  extract_dialog_lisp.c
(+1149 files in other folders)
